# Lumen-Hub

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  docs.yml  release.yml
crates/lumen-cli/: Cargo.toml
crates/lumen-cli/src/: main.rs
crates/lumen-convert/: .gitignore  Cargo.toml  README.md  build.rs
crates/lumen-convert/src/: lib.rs  server.rs
crates/lumen-convert/tools/: onnx_prep.py  sync_arch.sh
crates/lumen-hub/: Cargo.toml  build.rs
crates/lumen-hub/examples/: basic.yaml  bench-bioclip.yaml  bench-mixed-siglip-bioclip.yaml  bench-siglip.yaml  brave.yaml  check_hnsw.rs  minimal.local.yaml  minimal.yaml  photos-full.yaml  quantize_check.rs  repro_quant_roundtrip.rs  siglip_smoke.rs
crates/lumen-hub/proto/: ml_service.proto
crates/lumen-hub/src/: backend.rs  inference_worker.rs  lib.rs  main.rs  model_download.rs  warmup.rs
crates/lumen-hub/src/daemon/: batcher.rs  error.rs  grpc.rs  home_native.v1.rs  mdns.rs  mod.rs  proto.rs  server.rs
crates/lumen-hub/src/model_arch/: mod.rs
crates/lumen-hub/src/model_arch/aesthetic_head/: mod.rs  siglip2_base_patch16_224.rs  siglip2_so400m_patch14_384.rs
crates/lumen-hub/src/model_arch/antelopev2/: detection.rs  recognition.rs
crates/lumen-hub/src/model_arch/bioclip2/: text.rs  vision.rs
crates/lumen-hub/src/model_arch/pp_ocrv5/: detection.rs  recognition.rs
crates/lumen-hub/src/model_arch/pp_ocrv5_server/: classification.rs  detection.rs  mod.rs  recognition.rs
crates/lumen-hub/src/model_arch/pp_ocrv6_small/: classification.rs  detection.rs  mod.rs  recognition.rs
crates/lumen-hub/src/model_arch/siglip2_base_patch16_224/: text.rs  vision.rs
crates/lumen-hub/src/model_arch/siglip2_so400m_patch14_384/: text.rs  vision.rs
crates/lumen-hub/src/models/bioclip/: dataset.rs  factory.rs  mod.rs  model.rs  preprocess.rs  service.rs  task.rs
crates/lumen-hub/src/models/clip/: factory.rs  mod.rs  nodes.rs  pipeline.rs  service.rs  task.rs
crates/lumen-hub/src/models/fastvlm/: factory.rs  metadata.rs  mod.rs  service.rs  task.rs
crates/lumen-hub/src/models/insightface/: factory.rs  metadata.rs  mod.rs  model.rs  service.rs  task.rs
crates/lumen-hub/src/models/ppocr/: factory.rs  mod.rs  model.rs  nodes.rs  postprocess.rs  service.rs  task.rs
crates/lumen-hub/src/models/siglip/: factory.rs  mod.rs  model.rs  nodes.rs  pipeline.rs  service.rs  task.rs
crates/lumen-hub/src/service/: capability.rs  error.rs  factory.rs  hub.rs  mod.rs  registry.rs  service.rs  task.rs  tensor.rs
crates/lumen-hub/tests/: bioclip_exported_model_latency.rs  clip_exported_model_e2e.rs  clip_exported_model_latency.rs  e2e_bioclip.rs  e2e_insightface.rs  e2e_insightface_int8.rs  e2e_int8_spotcheck.rs  e2e_ppocr.rs  e2e_ppocr_server.rs  e2e_ppocr_v6_small.rs  e2e_siglip.rs  e2e_tensor_contract_grpc.rs  fastvlm_exported_decode_latency.rs  fastvlm_exported_model_latency.rs  insightface_exported_model_latency.rs  ppocr_exported_model_latency.rs  siglip_exported_model_e2e.rs  siglip_exported_model_latency.rs
crates/lumen-hub/tests/common/: mod.rs
crates/lumen-hub/tools/: check_onnx_candle_ops.py
crates/lumen-hub/tools/clip/: README.md  model_info.example.json
crates/lumen-hub/tools/clip/scripts/: README.md  build_bioclip2_hnsw.py  export_clip_to_onnx.py  make_bioclip2_domain_pack.py  treeoflife_bioclip2_download.py
crates/lumen-hub/tools/fastvlm/: README.md  model_info.example.json
crates/lumen-hub/tools/insightface/: example.json  model_info.example.json
crates/lumen-hub/tools/ppocr/: README.md  model_info.example.json
crates/lumen-hub/tools/siglip/: README.md  aesthetic_ava_train.ipynb  aesthetic_distill.ipynb  model_info.example.json  patch_onnx_outputs.py
crates/lumen-hub/tools/siglip/scripts/: export_siglip_onnx_package.py
crates/lumen-quant-core/: Cargo.toml
crates/lumen-quant-core/src/: lib.rs
crates/lumen-schema/: Cargo.toml
crates/lumen-schema/src/: lib.rs  mime.rs
crates/lumen-schema/src/config/: lumen_config.rs  mod.rs
crates/lumen-schema/src/model/: mod.rs  model_info.rs
crates/lumen-schema/src/result/: embedding_v1.rs  face_v1.rs  labels_v1.rs  mod.rs  ocr_v1.rs  text_generation_v1.rs
crates/lumnn/: Cargo.toml
crates/lumnn-mnn-sys/: Cargo.toml  build.rs
crates/lumnn-mnn-sys/cpp/include/: mnn_wrapper.h
crates/lumnn-mnn-sys/cpp/src/: mnn_wrapper.cpp
crates/lumnn-mnn-sys/src/: docsrs_stub.rs  lib.rs
crates/lumnn-ncnn-sys/: Cargo.toml  README.md  build.rs  wrapper.h
crates/lumnn-ncnn-sys/src/: lib.rs
crates/lumnn/src/: lib.rs
crates/lumnn/src/candle/: convert.rs  mod.rs  node.rs
crates/lumnn/src/core/: context.rs  mod.rs  node.rs  packet.rs  pipeline.rs
crates/lumnn/src/mnn/: convert.rs  mod.rs  node.rs
crates/lumnn/src/ndarray/: mod.rs  node.rs
crates/lumnn/src/ort/: convert.rs  env.rs  mod.rs  node.rs
crates/lumnn/tests/: test_candle_onnx_node.rs  test_e2e_pipeline.rs  test_feature_hygiene.rs  test_mnn_node.rs  test_ndarray_node.rs  test_ort_node.rs  test_pipeline.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: main.rs
docs/: docusaurus.config.ts  lumen-hub-runtime-memory-decision.md  lumen-hub-tensor-batching-decision.md  lumen-thin-tensor-input-contract.md  package-lock.json  sidebars.ts
docs/docs/: beta-quick-start.md  intro.md
docs/docs/architecture/: batching.md  model-pattern.md  overview.md  request-lifecycle.md  task-input.md  task-request-examples.md
docs/docs/configuration/: batching-config.md  lumen-config.md
docs/docs/development/: adding-a-model.md  beta-local-dist.md  model-repository.md  openvino-package.md
docs/docs/models/: bioclip.md  clip.md  fastvlm.md  insightface.md  ppocr.md  siglip.md
docs/src/pages/: index.module.css  index.tsx
infra/lumen-install-worker/: package-lock.json  package.json  wrangler.jsonc
infra/lumen-install-worker/src/: index.ts
schemas/config/: lumen_config.schema.json
schemas/model/: model_info.schema.json
schemas/result/: embedding_v1.schema.json  face_v1.schema.json  labels_v1.schema.json  ocr_v1.schema.json  text_generation_v1.schema.json
