[package]
name = "lumen-cli"
version = "0.1.0-beta.10"
edition = "2024"
repository = "https://github.com/EdwinZhanCN/Lumen-Hub"

[dependencies]
cliclack = "0.5.4"
flate2 = "1.1.9"
lumen-schema = { path = "../lumen-schema" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
sha2 = "0.10.9"
tar = "0.4.44"
thiserror = "2.0.18"
ureq = "3.3.0"
zip = "6.0.0"
