[package]
name = "lumen-hub"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/EdwinZhanCN/Lumen-Hub"

[package.metadata.dist]
dist = false

[features]
default = ["profile-universal-cpu"]
clip = []
fastvlm = []
insightface = []
ppocr = ["imageproc", "rten-imageproc"]
siglip = []
ort-download-binaries = ["lumnn/ort-download-binaries"]
ort-load-dynamic = ["lumnn/ort-load-dynamic"]
ort-pkg-config = ["lumnn/ort-pkg-config"]
ort-cuda = ["lumnn/ort-cuda"]
ort-tensorrt = ["lumnn/ort-tensorrt"]
ort-directml = ["lumnn/ort-directml"]
ort-coreml = ["lumnn/ort-coreml"]
ort-xnnpack = ["lumnn/ort-xnnpack"]
ort-openvino = ["lumnn/ort-openvino"]
candle = ["lumnn/candle"]
candle-cuda = ["candle", "lumnn/candle-cuda"]
candle-cudnn = ["candle", "lumnn/candle-cudnn"]
candle-metal = ["candle", "lumnn/candle-metal"]
candle-accelerate = ["candle", "lumnn/candle-accelerate"]
candle-mkl = ["candle", "lumnn/candle-mkl"]
mnn = ["lumnn/mnn"]
mnn-vulkan = ["mnn", "lumnn/mnn-vulkan"]
mnn-cuda = ["mnn", "lumnn/mnn-cuda"]
mnn-metal = ["mnn", "lumnn/mnn-metal"]
mnn-opencl = ["mnn", "lumnn/mnn-opencl"]
mnn-opengl = ["mnn", "lumnn/mnn-opengl"]
mnn-coreml = ["mnn", "lumnn/mnn-coreml"]
profile-universal-cpu = [
  "clip",
  "fastvlm",
  "insightface",
  "ppocr",
  "siglip",
  "ort-download-binaries",
]
profile-darwin-arm64 = [
  "clip",
  "fastvlm",
  "insightface",
  "ppocr",
  "siglip",
  "ort-download-binaries",
  "ort-xnnpack",
  "mnn-metal",
]
profile-linux-x64-cuda = [
  "clip",
  "fastvlm",
  "insightface",
  "ppocr",
  "siglip",
  "ort-download-binaries",
  "ort-cuda",
]
profile-windows-x64-dml = [
  "clip",
  "fastvlm",
  "insightface",
  "ppocr",
  "siglip",
  "ort-download-binaries",
  "ort-directml",
]
profile-linux-x64-openvino = [
  "clip",
  "fastvlm",
  "insightface",
  "ppocr",
  "siglip",
  "ort-openvino",
  "ort-load-dynamic",
]

[dependencies]
async-trait = "0.1.89"
base64 = "0.22.1"
bytes = "1.11.1"
console = "0.16.1"
half = "2.7.1"
image = "0.25.10"
indicatif = "0.18.3"
imageproc = { version = "0.26", optional = true }
lumen-schema = { path = "../lumen-schema" }
lumnn = { path = "../lumnn", default-features = false }
memmap2 = "0.9.9"
minijinja = "2.9.2"
rand = "0.8.5"
mdns-sd = "0.19.0"
prost = "0.14.3"
rten-imageproc = { version = "0.24", optional = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
thiserror = "2.0.18"
tokenizers = "0.22.2"
tokio = { version = "1.51.1", features = ["rt-multi-thread", "macros", "sync", "time", "signal"] }
tonic = { version = "0.14.5", features = ["transport"] }
tonic-prost = "0.14.5"
tracing = "0.1.44"
ureq = "3.3.0"

[build-dependencies]
protoc-bin-vendored = "3.2.0"
tonic-prost-build = "0.14.5"
