[package]
name = "lumen-hub"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/EdwinZhanCN/Lumen-Hub"

[package.metadata.dist]
dist = false

[features]
# Default build: CPU backend with the production model set. CLIP is omitted
# because its Burn model is not yet available.
default = ["cpu", "clip", "insightface", "ppocr", "siglip"]

# --- Model packages ---
clip = []
insightface = []
ppocr = ["imageproc", "rten-imageproc"]
siglip = []

# --- Burn compute backends ---
# Exactly one backend is selected at build time. When several are enabled the
# highest-priority one wins (see `src/backend.rs`): cuda > rocm > vulkan > metal
# > wgpu > cpu. `cpu` is part of the default set so `--features metal` simply
# overrides it.
#
# CPU uses Burn Flex instead of the legacy NdArray backend. Because the top-level
# burn dependency is built with default-features disabled, we explicitly activate
# burn-flex with rayon + SIMD so CPU inference uses the multi-core/vectorized
# execution paths.
#
# Fusion is enabled for GPU backends: the deep antelopev2 graph overflows the
# stack in eager mode, and fusion also batches kernels for throughput. burn-store
# keeps only the burnpack reader (no GPU features) to avoid a second, conflicting
# burn-wgpu feature activation.
cpu = ["burn/flex", "burn/simd", "dep:burn-flex"]
metal = ["burn/metal", "burn/fusion", "dep:cubecl-runtime"]
vulkan = ["burn/vulkan", "burn/fusion", "dep:cubecl-runtime"]
wgpu = ["burn/wgpu", "burn/fusion", "dep:cubecl-runtime"]
cuda = ["burn/cuda", "burn/fusion", "dep:cubecl-runtime"]
rocm = ["burn/rocm", "burn/fusion", "dep:cubecl-runtime"]

[dependencies]
async-trait = "0.1.89"
base64 = "0.22.1"
burn = { version = "0.21.0", default-features = false, features = ["std"] }
burn-flex = { version = "0.21.0", default-features = false, features = ["std", "simd", "rayon"], optional = true }
burn-store = { version = "0.21.0", default-features = false, features = ["burnpack", "std", "memmap"] }
bytes = "1.11.1"
console = "0.16.1"
cubecl-runtime = { version = "0.10.0", default-features = false, features = ["std"], optional = true }
half = "2.7.1"
hnswlib-rs = "0.5.0"
image = "0.25.10"
indicatif = "0.18.3"
imageproc = { version = "0.26", optional = true }
lumen-quant-core = { path = "../lumen-quant-core" }
lumen-schema = { path = "../lumen-schema" }
memmap2 = "0.9.9"
minijinja = "2.9.2"
rand = "0.8.5"
mdns-sd = "0.20.0"
prost = "0.14.3"
rten-imageproc = { version = "0.24", optional = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
thiserror = "2.0.18"
tokenizers = "0.22.2"
tokio = { version = "1.51.1", features = ["rt-multi-thread", "macros", "sync", "time", "signal"] }
tonic = { version = "0.14.5", features = ["transport"] }
tonic-prost = "0.14.5"
tracing = "0.1.44"
ureq = "3.3.0"

[build-dependencies]
protoc-bin-vendored = "3.2.0"
tonic-prost-build = "0.14.5"
