[package]
name = "lumen-schema"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.11.1"
regex = "1.12.3"
schemars = { version = "1.2.1", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
validator = { version = "0.20.0", features = ["derive"] }
