[package]
name = "lumnn"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/EdwinZhanCN/Lumen-Hub"

[features]
default = ["ort-download-binaries"]
# ONNX Runtime features
ort-download-binaries = ["ort/download-binaries", "ort/copy-dylibs"]
ort-load-dynamic = ["ort/load-dynamic"]
ort-pkg-config = ["ort/pkg-config"]
ort-cuda = ["ort/cuda"]
ort-tensorrt = ["ort/tensorrt", "ort-cuda"]
ort-directml = ["ort/directml"]
ort-coreml = ["ort/coreml"]
ort-xnnpack = ["ort/xnnpack"]
ort-openvino = ["ort/openvino"]
# Candle features
candle = ["dep:candle-core", "dep:candle-onnx"]
candle-cuda = ["candle", "candle-core/cuda"]
candle-cudnn = ["candle", "candle-core/cudnn"]
candle-metal = ["candle", "candle-core/metal"]
candle-accelerate = ["candle", "candle-core/accelerate"]
candle-mkl = ["candle", "candle-core/mkl"]
# MNN features (backend selection)
mnn = ["dep:lumnn-mnn-sys"]
mnn-vulkan = ["mnn", "lumnn-mnn-sys/vulkan"]
mnn-cuda = ["mnn", "lumnn-mnn-sys/cuda"]
mnn-metal = ["mnn", "lumnn-mnn-sys/metal"]
mnn-opencl = ["mnn", "lumnn-mnn-sys/opencl"]
mnn-opengl = ["mnn", "lumnn-mnn-sys/opengl"]
mnn-coreml = ["mnn", "lumnn-mnn-sys/coreml"]

[dependencies]
async-trait = "0.1.89"
candle-core = { version = "0.10.2", optional = true }
candle-onnx = { version = "0.10.2", optional = true }
half = "2.7.1"
lumnn-mnn-sys = { path = "../lumnn-mnn-sys", optional = true }
ndarray = "0.17.2"
ort = { version = "2.0.0-rc.12", default-features = false, features = [
  "std",
  "ndarray",
  "tracing",
  "half",
  "api-24",
  "tls-native",
] }
thiserror = "2.0.18"
tokio = { version = "1.51.1", features = ["sync"] }
tracing = "0.1.44"

[dev-dependencies]
prost = "0.14.3"
tokio = { version = "1.51.1", features = ["sync", "rt", "rt-multi-thread", "macros"] }

[[test]]
name = "test_candle_onnx_node"
path = "tests/test_candle_onnx_node.rs"
required-features = ["candle"]

[[test]]
name = "test_mnn_node"
path = "tests/test_mnn_node.rs"
required-features = ["mnn"]
